--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -13,4 +13,5 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
         a.nav-link(href='/cohorts') Cohorts
     .form-inline.my-2.my-lg-0
       .pill.text-muted.mr-2 v#{version}
-      button#signOut.btn.btn-outline-primary.my-2.my-sm-0 Signout
+      if user && user.name
+        button#signOut.btn.btn-outline-primary.my-2.my-sm-0 Signout
