adds a help page

--- a/views/navbar.pug
+++ b/views/navbar.pug
@@ -11,6 +11,8 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
           span.sr-only (current)
       li.nav-item
         a.nav-link(href='/cohorts') Cohorts
+      li.nav-item
+        a.nav-link(href='/help') Help
     .form-inline.my-2.my-lg-0
       .pill.text-muted.mr-2 v#{version}
       if user && user.name
