--- a/views/help.pug
+++ b/views/help.pug
@@ -15,7 +15,7 @@ block content
         p It is upto you how you name your cohorts. Follow the prompts to add apprentices. You will be able to navigate between all your apprentices in a tab styled panel like this.
         p
             img(src="https://user-images.githubusercontent.com/4499581/79871138-d9994b00-83db-11ea-95e1-4edd6067d6ff.png" width="100%")
-        p The progress bar will only be calculated once you have visited your apprentices individual page. You can click on the document icon next to your apprentices name to view their portfolio. If you make a mistake or need to remove an apprentice you can use the 'delete' ⌫ button.
+        p The progress bar is only calculated when you visit your apprentices portfolio mapping page. You can click on the document icon next to your apprentices name to view their original portfolio document. Click on the apprentices name to view their portfolio mapping page. If you make a mistake or need to remove an apprentice you can use the 'delete' ⌫ button.
         hr
         h2 Linking Portfolios
         p Once you apprentice is added you need to link their portfolio document. Get them to share the document with you and Papper. Below is an example of the sharing settings. Can you see Papper's email address? He just needs read only permissions.
@@ -34,6 +34,7 @@ block content
         p Now you have tagged a part of the portfolio you can see the tag on the matrix. If you click on the tag button in the left column it will reveal the competency. If you hover over the tag you'll see a snipet from the document (should be enough to remind you of context), if your tag is followed by #[i n of n] that will be displayed in the tag. Click on the tag to goto that comment in the original document.
         p
             img(src="https://user-images.githubusercontent.com/4499581/79881007-a01b0c80-83e8-11ea-8db1-daf2cf040a78.gif" width="100%")
+        p You can share the URL of this page with your apprentice. It does not require authentication to view.
         p.mb-5.pb-5 If you have questions/issues you can contact me here #[a(href="mailto:bernard.mordan@whitehat.org.uk?subject=Question about using Papper") bernard.mordan@whitehat.org.uk]
 
 
