adds an overide of apprentice tags

--- a/views/help.pug
+++ b/views/help.pug
@@ -32,6 +32,7 @@ block content
             img(src="https://user-images.githubusercontent.com/4499581/79877900-b757fb00-83e4-11ea-8872-bfb74c12f2ed.png" width="100%")
         p Interestingly you can see this example is tagged with #[strong #business] it's then followed by "1 of 2" because the business competency has two bullet points, and this statement by this apprentice demonstrates, the first. This helps keep track of competencies that have multiple parts to them.
         p Now you have tagged a part of the portfolio you can see the tag on the matrix. If you click on the tag button in the left column it will reveal the competency. If you hover over the tag you'll see a snipet from the document (should be enough to remind you of context), if your tag is followed by #[i n of n] that will be displayed in the tag. Click on the tag to goto that comment in the original document.
+        p Your apprentices can also tag their document. Sometimes you might want to overide their tag, and not count it. You can override a tag by replying with the tag and key word "not". For example "not sure about #data here" - a comment like that will overide and not count that #data tag.
         p
             img(src="https://user-images.githubusercontent.com/4499581/79881007-a01b0c80-83e8-11ea-8db1-daf2cf040a78.gif" width="100%")
         p You can share the URL of this page with your apprentice. It does not require authentication to view.
