--- a/views/cohorts.pug
+++ b/views/cohorts.pug
@@ -60,8 +60,14 @@ block content
                                                 button.btn.btn-danger(id=`delete-apprentice-${apprentice.id}`) Delete
 
                                             
-                        li.list-group-item
+                        li.list-group-item.d-flex.justify-content-between
                             button.btn.btn-primary(data-toggle='modal' data-target=`#modal-add-apprentice-to-cohort-${cohort.id}`) Add an Apprentice
+                            button.btn.btn-danger(data-toggle='modal' data-target=`#delete-cohort-${cohort.id}`) Delete Cohort
+                            +modal(`Delete Cohort ${cohort.title}`, `delete-cohort-${cohort.id}`)
+                                form.w-75.mx-auto(action=`/cohorts/${cohort.id}/delete`)
+                                    label.mt-3.mb-4(for=`delete-cohort-${cohort.id}`) Are you sure you want to delete this cohort?
+                                    button.btn.btn-secondary.mr-2(type="reset" data-dismiss='modal') Cancel
+                                    button.btn.btn-danger(id=`delete-cohort-${cohort.id}`) Delete
                 +modal(`Add an apprentice to ${cohort.title}`, `modal-add-apprentice-to-cohort-${cohort.id}`)
                     form.w-75.mx-auto(action=`/cohorts/${cohort.id}/apprentices` method='POST')
                         .form-group
