fixes links to different google doc types

--- a/views/cohorts.pug
+++ b/views/cohorts.pug
@@ -32,12 +32,12 @@ block content
                                     .d-flex.align-items-center
                                         a.w-25(href=`/cohorts/${cohort.id}/apprentices/${apprentice.id}`)=apprentice.name
                                         a.ml-3.mr-2(
-                                            href=`https://docs.google.com/document/d/${apprentice.fileId}/`
+                                            href=`https://docs.google.com/${apprentice.doctype}/d/${apprentice.fileId}/`
                                             target='_Blank'
                                             data-toggle="tooltip"
                                             data-placement="top"
-                                            title="Open Google Doc")
-                                            img(src='/google-docs-icon-2.svg' width='16' alt='google docs')
+                                            title=`Open ${{document: "Doc", presentation: "Slides", spreadsheets: "Sheet"}[apprentice.doctype]}`)
+                                            img(src=`/${apprentice.doctype}.svg` width='16' alt='google docs')
                                         a.m-1.text-decoration-none(
                                             href=`/apprentices/${apprentice.id}/epa-mocks?mock=1&status=${!apprentice.mocks > 0}&cohort=${cohort.title.replace(/[^\w\d]/g, '')}`
                                             style=`font-size:1.5rem;-webkit-filter:grayscale(${apprentice.mocks > 0 ? 0 : 100}%);opacity:${apprentice.mocks < 1 ? 0.2 : 1};text-shadow:1px 1px 2px ${apprentice.mocks < 1 ? "transparent" : "gray"};`
