--- a/views/help.pug
+++ b/views/help.pug
@@ -36,7 +36,7 @@ block content
         p
             img(src="https://user-images.githubusercontent.com/4499581/79881007-a01b0c80-83e8-11ea-8db1-daf2cf040a78.gif" width="100%")
         p You can share the URL of this page with your apprentice. It does not require authentication to view.
-        p.mb-5.pb-5 If you have questions/issues you can contact me here #[a(href="mailto:bernard.mordan@whitehat.org.uk?subject=Question about using Papper") bernard.mordan@whitehat.org.uk]
+        p.mb-5.pb-5 If you have questions/issues you can contact me here #[a(href="mailto:bernard.mordan@multiverse.io?subject=Question about using Papper") bernard.mordan@multiverse.io]
         h2 Tracking Mock EPAs
         p
             img(src="https://user-images.githubusercontent.com/4499581/88915481-4bdfbe00-d25c-11ea-83ce-33320925fdba.png" width="40%" alt="mock EPA interface")
