--- a/views/cohorts.pug
+++ b/views/cohorts.pug
@@ -43,13 +43,13 @@ block content
                                             style=`font-size:1.5rem;-webkit-filter:grayscale(${apprentice.mocks > 0 ? 0 : 100}%);opacity:${apprentice.mocks < 1 ? 0.2 : 1};text-shadow:1px 1px 2px ${apprentice.mocks < 1 ? "transparent" : "gray"};`
                                             data-toggle="tooltip"
                                             data-placement="top"
-                                            title="Mock EPA 1") &#x1F3C5;
+                                            title="Award One") &#x1F3C5;
                                         a.ml-1.mr-3.text-decoration-none(
                                             href=`/apprentices/${apprentice.id}/epa-mocks?mock=2&status=${apprentice.mocks === 1}&cohort=${cohort.title.replace(/[^\w\d]/g, '')}` 
                                             style=`font-size:1.5rem;-webkit-filter:grayscale(${apprentice.mocks > 1 ? 0 : 100}%);opacity:${apprentice.mocks < 2 ? 0.2 : 1};text-shadow:1px 1px 2px ${apprentice.mocks < 2 ? "transparent" : "gray"};`
                                             data-toggle="tooltip"
                                             data-placement="top"
-                                            title="Mock EPA 2") &#x1F396;
+                                            title="Award Two") &#x1F396;
                                         .w-75
                                             include progress.pug
                                         button.btn.btn-link.text-danger(data-toggle='modal' data-target=`#delete-apprentice-${apprentice.id}`) ⌫
