updates help page with Comment level permission for papper tip

--- a/views/help.pug
+++ b/views/help.pug
@@ -18,8 +18,8 @@ block content
         p The progress bar is only calculated when you visit your apprentices portfolio mapping page. You can click on the document icon next to your apprentices name to view their original portfolio document. Click on the apprentices name to view their portfolio mapping page. If you make a mistake or need to remove an apprentice you can use the 'delete' ⌫ button.
         hr
         h2 Linking Portfolios
-        p Once you apprentice is added you need to link their portfolio document. Get them to share the document with you and Papper. Below is an example of the sharing settings. Can you see Papper's email address? He just needs read only permissions.
-        p papper@portfolio-mapper.iam.gserviceaccount.com
+        p Once you apprentice is added you need to link their portfolio document. Get them to share the document with you and Papper. Below is an example of the sharing settings. Can you see Papper's email address? He needs to be at the 'Commenter' level of permisions.
+        p #[strong papper@portfolio-mapper.iam.gserviceaccount.com]
         p
             img(src="https://user-images.githubusercontent.com/4499581/79871598-7cea6000-83dc-11ea-904d-dd1003cc9297.png" width="100%")
         p To link the portfolio to Papper you need the #[strong fileid] from the Google doc URL. See below. Be careful, you want the long alphanumeric between the two forward slashes "/". Here is the fileid we need highlighted
