updates help page with Comment level permission for papper tip

--- a/views/help.pug
+++ b/views/help.pug
@@ -22,7 +22,7 @@ block content
         p #[strong papper@portfolio-mapper.iam.gserviceaccount.com]
         p
             img(src="https://user-images.githubusercontent.com/4499581/79871598-7cea6000-83dc-11ea-904d-dd1003cc9297.png" width="100%")
-        p To link the portfolio to Papper you need the #[strong fileid] from the Google doc URL. See below. Be careful, you want the long alphanumeric between the two forward slashes "/". Here is the fileid we need highlighted
+        p To link the portfolio to Papper you need the #[strong fileid] from the Google doc URL. See below. Be careful, you want the long alphanumeric between the two forward slashes "/". Here is the _fileid_ we need highlighted
         p
         | https://docs.google.com/document/d/#[mark(style="background-color:yellow;") 1b1IsepNLkFBHocDoS64Q09IW9T0KwZiIMZsgKjGKSok]/edit#heading=h.srn2mpd14zdh
         hr
@@ -31,7 +31,7 @@ block content
         p
             img(src="https://user-images.githubusercontent.com/4499581/79877900-b757fb00-83e4-11ea-8872-bfb74c12f2ed.png" width="100%")
         p Interestingly you can see this example is tagged with #[strong #business] it's then followed by "1 of 2" because the business competency has two bullet points, and this statement by this apprentice demonstrates, the first. This helps keep track of competencies that have multiple parts to them.
-        p Now you have tagged a part of the portfolio you can see the tag on the matrix. If you click on the tag button in the left column it will reveal the competency. If you hover over the tag you'll see a snipet from the document (should be enough to remind you of context), if your tag is followed by #[i n of n] that will be displayed in the tag. Click on the tag to goto that comment in the original document.
+        p Now you have tagged a part of the portfolio you can see the tag on the matrix. If you click on the tag button in the left column it will reveal the competency. If you hover over the tag you'll see a snippet from the document (should be enough to remind you of context), if your tag is followed by #[i n of n] that will be displayed in the tag. Click on the tag to goto that comment in the original document.
         p Your apprentices can also tag their document. Sometimes you might want to overide their tag, and not count it. You can override a tag by replying with the tag and key word "not". For example "not sure about #data here" - a comment like that will overide and not count that #data tag.
         p
             img(src="https://user-images.githubusercontent.com/4499581/79881007-a01b0c80-83e8-11ea-8db1-daf2cf040a78.gif" width="100%")
