--- a/views/progress.pug
+++ b/views/progress.pug
@@ -1,3 +1,3 @@
 .progress.my-4
-    .progress-bar(role="progressbar" aria-valuenow=apprentice.progress aria-valuemin="0" aria-valuemax="100" class=`${Math.round(apprentice.progress) === 100 ? 'bg-success' : 'progress-bar-striped bg-info'}` style=`width:${apprentice.progress}%;`)
+    .progress-bar(role="progressbar" aria-valuenow=apprentice.progress aria-valuemin="0" aria-valuemax="100" class=`${Math.round(apprentice.progress) > 100 ? 'bg-success' : 'progress-bar-striped bg-info'}` style=`width:${apprentice.progress}%;`)
         | #{Math.round(apprentice.progress) > 100 ? 100 : Math.round(apprentice.progress)}%
